<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@color/transparent"
              android:orientation="vertical"
              android:paddingRight="10dp">

    <ImageView
        android:id="@+id/iv_triangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="6dp"
        android:src="@drawable/icon_triangle"/>

    <LinearLayout
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background6_radius_black_boder_black"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_scan"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/popmenu_item_top_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@drawable/icon_scan"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/text_scan"
                android:textColor="@color/co10"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"/>

        <LinearLayout
        android:id="@+id/ll_sound"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/popmenu_item_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:src="@drawable/icon_sound" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/text_sound"
        android:textColor="@color/co10" />
        </LinearLayout>

        <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/popmenu_item_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@drawable/icon_search"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/text_search"
                android:textColor="@color/co10"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"/>

        <LinearLayout
            android:id="@+id/ll_user_info"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/popmenu_item_bottom_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@drawable/icon_user"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/text_user_info"
                android:textColor="@color/co10"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
