<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/ll_notice_select_list"
              android:layout_width="180dp"
              android:layout_height="wrap_content"
              android:background="@drawable/background_notice_select"
              android:orientation="vertical"
              android:paddingBottom="10dp"
              android:paddingTop="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/text_system_notice"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/switch_system_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            app:kswAnimationDuration="300"
            app:kswBackDrawable="@drawable/notice_switch_back"
            app:kswThumbDrawable="@drawable/notice_switch"
            app:kswThumbHeight="18dp"
            app:kswThumbMarginBottom="-4dp"
            app:kswThumbMarginLeft="-3dp"
            app:kswThumbMarginRight="-3dp"
            app:kswThumbMarginTop="-1dp"
            app:kswThumbWidth="18dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/text_work_notice"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/switch_work_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            app:kswAnimationDuration="300"
            app:kswBackDrawable="@drawable/notice_switch_back"
            app:kswThumbDrawable="@drawable/notice_switch"
            app:kswThumbHeight="18dp"
            app:kswThumbMarginBottom="-4dp"
            app:kswThumbMarginLeft="-3dp"
            app:kswThumbMarginRight="-3dp"
            app:kswThumbMarginTop="-1dp"
            app:kswThumbWidth="18dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/text_warning_system"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/switch_warning_system"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            app:kswAnimationDuration="300"
            app:kswBackDrawable="@drawable/notice_switch_back"
            app:kswThumbDrawable="@drawable/notice_switch"
            app:kswThumbHeight="18dp"
            app:kswThumbMarginBottom="-4dp"
            app:kswThumbMarginLeft="-3dp"
            app:kswThumbMarginRight="-3dp"
            app:kswThumbMarginTop="-1dp"
            app:kswThumbWidth="18dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/text_report_comment"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/switch_report_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            app:kswAnimationDuration="300"
            app:kswBackDrawable="@drawable/notice_switch_back"
            app:kswThumbDrawable="@drawable/notice_switch"
            app:kswThumbHeight="18dp"
            app:kswThumbMarginBottom="-4dp"
            app:kswThumbMarginLeft="-3dp"
            app:kswThumbMarginRight="-3dp"
            app:kswThumbMarginTop="-1dp"
            app:kswThumbWidth="18dp"/>
    </RelativeLayout>
</LinearLayout>