<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@color/transparent"
              android:orientation="vertical"
              android:paddingRight="10dp">

    <ImageView
        android:id="@+id/iv_triangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="6dp"
        android:src="@drawable/icon_triangle"/>

    <LinearLayout
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background6_radius_black_boder_black"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_share"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/popmenu_item_top_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@drawable/icon_share"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/text_share"
                android:textColor="@color/co10"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"/>

        <LinearLayout
            android:id="@+id/ll_shaixuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/popmenu_item_selector"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/icon_shaixuan"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/text_shaixuan"
                    android:textColor="@color/co10"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_refresh"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/popmenu_item_bottom_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@drawable/icon_refresh"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/text_refresh"
                android:textColor="@color/co10"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
