<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_back"
            style="@style/BannerBackButton"
            android:onClick="dismissActivity"/>

        <TextView
            style="@style/BannerBackText"
            android:layout_toRightOf="@id/iv_back"
            android:onClick="dismissActivity"/>

        <TextView
            android:id="@+id/tv_title"
            style="@style/BannerTitle"
            android:text="密码修改"
            android:textColor="@color/black"
            android:textSize="18sp"/>
    </RelativeLayout>

    <View style="@style/SmallDivider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/background_user_number">

            <TextView
                android:id="@+id/tv_user_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="工号"
                android:textColor="@color/white"
                android:textSize="15sp"/>
        </RelativeLayout>

        <LinearLayout
            style="@style/ll_list_password_alter_items">

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="@drawable/background_password_alter_img">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_mobile"/>
            </RelativeLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/text_phone_number"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_toLeftOf="@+id/rl_get_code"
                android:background="@drawable/background_password_alter">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:background="@null"
                    android:hint="@string/text_input_code"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_get_code"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/background_user_number">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/text_get_code"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            style="@style/ll_list_password_alter_items">

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="@drawable/background_password_alter_img">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_lock"/>
            </RelativeLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/text_new_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            style="@style/ll_list_password_alter_items">

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="@drawable/background_password_alter_img">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_lock"/>
            </RelativeLayout>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/text_confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_commit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/background_commit_password">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:text="登录"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>