<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_single_value"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_below="@+id/ll_mine_user_top"
    android:weightSum="3"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/rl_login_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/tv_login_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="70"
                android:textColor="#00a4e9"
                android:textSize="@dimen/single_value_text_size_large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_login_number_sub"
                android:layout_alignBaseline="@+id/tv_login_number"
                android:layout_marginLeft="3dp"
                android:layout_toRightOf="@id/tv_login_number"
                android:text="天"
                android:textColor="#00a4e9"
                android:textSize="@dimen/single_value_text_size_medium"/>

            <TextView
                android:id="@+id/tv_login_number_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_login_number"
                android:layout_centerHorizontal="true"
                android:text="@string/text_user_number"
                android:textColor="@color/black"
                android:textSize="@dimen/single_value_text_size_small"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/rl_report_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/tv_report_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18"
                android:textColor="#91c941"
                android:textSize="@dimen/single_value_text_size_large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_report_number_sub"
                android:layout_marginLeft="3dp"
                android:layout_toRightOf="@id/tv_report_number"
                android:layout_alignBaseline="@id/tv_report_number"
                android:text="次"
                android:textColor="#91c941"
                android:textSize="@dimen/single_value_text_size_medium"/>

            <TextView
                android:id="@+id/tv_report_number_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tv_report_number"
                android:text="@string/text_report_number"
                android:textColor="@color/black"
                android:textSize="@dimen/single_value_text_size_small"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1">
        <RelativeLayout
            android:id="@+id/rl_beyond_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/tv_beyond_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18"
                android:textColor="#f57658"
                android:textSize="@dimen/single_value_text_size_large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_toRightOf="@id/tv_beyond_number"
                android:layout_alignBaseline="@id/tv_beyond_number"
                android:text="%"
                android:textColor="#f57658"
                android:textSize="@dimen/single_value_text_size_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tv_beyond_number"
                android:text="@string/text_beyond"
                android:textColor="@color/black"
                android:textSize="@dimen/single_value_text_size_small"/>
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>